--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -4,7 +4,7 @@
             <% @artists.each_slice(2) do |artists| %>
                 <tr class="table-row">
                     <td class="table-cell table-cell--release">
-                        <a href="<%= "/artists/#{artists[0].slug}" %>"><img src= <%= File.join(@s3_images, "artists", small_artists_image(artists[0].image)) %>></a>
+                        <a href="<%= "/artists/#{artists[0].slug}" %>"><img src= <%= File.join(@s3_images, "artists", artists[0].image) %>></a>
                         <p>
                         <span><a href="<%= "/artists/#{artists[0].slug}" %>"><%= artists[0].name %></a></span>
                         <span><%= artists[0].location %></a></span>
@@ -12,7 +12,7 @@
                     </td>
                     <% if artists.length > 1 %>
                         <td class="table-cell table-cell--release">
-                            <a href="<%= "/artists/#{artists[1].slug}" %>"><img src= <%= File.join(@s3_images, "artists", small_artists_image(artists[1].image)) %>></a>
+                            <a href="<%= "/artists/#{artists[1].slug}" %>"><img src= <%= File.join(@s3_images, "artists", artists[1].image) %>></a>
                             <p>
                             <span><a href="<%= "/artists/#{artists[1].slug}" %>"><%= artists[1].name %></a></span>
                             <span><%= artists[1].location %></a></span>
