--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,12 +1,16 @@
 <article class="column-container column-container__article">
     <section class="column-block column-block__main-content">
+        
         <div class="content-block content-block__banner">
             <figure>
-                <img src=<%= File.join(@s3_images, "artists", @artist.image) %>>
+                <img class="artist" src=<%= File.join(@s3_images, "artists", @artist.image) %>>
             </figure>
         </div>
-    
+
         <div class="content-block content-block--article">
+            <h3 class="heading heading--article-title">
+                <%= @artist.name %>
+            </h3>
             <p><%= @artist.description.html_safe %></p>
         </div>
         
@@ -21,38 +25,68 @@
                 </figure>
             </div>        
         </aside>
-        <div class="content-block aside__widget">
-            <span class="text-title">ARTIST <%= @artist.name %></span>
-			<span class="text-title">LOCATION <%= @artist.location %></span>
-			<% unless @artist.active %>
-				<span class="text-title">WHEN <%= @artist.start_date.year.to_s + " - " + @artist.end_date.year.to_s %></span>  
-			<% else %>
-				<span class="text-title">WHEN <%= @artist.start_date.year.to_s + " - " + DateTime.now.year.to_s %></span>  
-			<% end %>				
-		</div>
 
-		<div class="content-block content-block--title-heading">
-            <h1>
-                <span class="text-title">Previous Releases</span>
-            </h1>  
+<section class="content-block">
+    <div class="column-container column-container__2-cols">
+        <div class="column-block">
+            <table>
+                <tbody>       
+                <tr>
+                    <td>
+                        <h2 class="heading heading--content-block">Artist</h2>
+                    </td>
+                    <td>
+                        <h2 class="heading heading--content-block"><span class="biography"><%= @artist.name %></span></h2>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <h2 class="heading heading--content-block">Location</h2>
+                    </td>
+                    <td>
+                        <h2 class="heading heading--content-block"><span class="biography"><%= @artist.location %></span></h2>
+                    </td>
+                </tr>
+                <% unless @artist.active %>
+                <tr>
+                    <td>
+                        <h2 class="heading heading--content-block">Active</h2>
+                    </td>
+                    <td>
+                        <h2 class="heading heading--content-block"><span class="biography"><%= @artist.start_date.year.to_s + " - " + @artist.end_date.year.to_s %></span></h2>
+                    </td>
+                </tr>
+                <% else %>
+                <tr>
+                    <td>
+                        <h2 class="heading heading--content-block">Active</h2>
+                    </td>
+                    <td>
+                        <h2 class="heading heading--content-block"><span class="biography"><%= @artist.start_date.year.to_s + " - " + DateTime.now.year.to_s %></span></h2>
+                    </td>
+                </tr>
+                <% end %>
+        </tbody>
+    </table>
         </div>
 
-        <div class="content-block aside__widget">
-			<% @artist.releases.each do |rel| %>
-				<span class="text-title"><a href="<%= "/releases/" + rel.cat %>"><%= rel.title + " - " + rel.cat %></a></span>
-			<% end %>
-		</div>
-		<div class="content-block content-block--title-heading">
-            <h1>
-                <span class="text-title">Related Links</span>
-            </h1>    
+        <div class="column-block">
+            <h2 class="heading heading--content-block">
+            Releases on Forwind
+            <% @artist.releases.each do |rel| %>
+            <span class="biography"><a href="<%= "/releases/" + rel.cat %>"><%= rel.title + " - " + rel.cat %></a></span>
+            <% end %>
+            </h2>
+
+            <h2 class="heading heading--content-block">
+            Related Links
+            <% @artist.links.each do |link| %>
+            <span class="biography"><a href=<%= link.location %>><%= external_link_trimmer(link.location) %></a></span>
+            <% end %>
+            </h2>
         </div>
-        <div class="content-block aside__widget">
-			<% @artist.links.each do |link| %>
-				<span class="text-title"><a href=<%= link.location %>><%= external_link_trimmer(link.location) %></a></span>
-			<% end %>
-		</div>		
-	</section>
+    </div>
+</section>
 
 </article>
-
