--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -24,15 +24,18 @@ main {
 }
 
 a {
-    &:link,
-    &:active,
-    &:visited,
+    color: $link-color-primary;
+    text-decoration: none;
+    &:visited, 
+    &:link, 
+    &:active {
+        opacity: 1;
+        text-decoration: none !important;
+        } 
     &:hover {
-        color: $link-color-primary;
-    }
-    &:hover {
-        text-decoration: underline;
-    }
+        opacity: 1;
+        text-decoration: none !important;
+        } 
 }
 
 img {
@@ -149,9 +152,6 @@ blockquote {
             font-size: $font-size-sm;
             text-transform: none;
             display: inline-block;         
-        &:hover {
-            opacity: 0.8;
-        }
         }
         span.biography {
             text-transform: none;
@@ -163,9 +163,6 @@ blockquote {
             text-transform: none;
             margin-left: - 2 * $spacing-factor;
             display: block;
-        &:hover {
-            opacity: 0.8;
-        }
         }
 
         
@@ -237,7 +234,7 @@ blockquote {
                 font-size: $font-size-md;
             }
             @include breakpoint(m) {
-                height: auto;
+                /* height: auto; */
             }
             .img {
                 width: 100%;
@@ -249,7 +246,7 @@ blockquote {
             a {
                 @extend %alt-link;
                 color: $link-color-secondary;
-            }
+                            }
         }
         &__logos {
             margin-top: - $spacing-factor * 2;
@@ -262,7 +259,7 @@ blockquote {
             a {
                 @extend %alt-link;
                 color: $link-color-secondary;
-            }
+                }
         }
     }
 }
@@ -515,9 +512,6 @@ img.news-image-top {
             padding: 0 $spacing-factor $spacing-factor 0;
             width: 50%;
             display: table-cell;
-            a {
-                text-decoration: none;
-            }
             &--cover {
                 width: 0;
                 img {
