--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -28,7 +28,7 @@
 
         <div class="content-block content-block--title-heading">
             <h1>
-                <span class="text-title"><%= raw(munge_artist_names(@release).titleize) %></span>
+                <span class="text-title"><%= raw(munge_artist_names(@release)) %></span>
                 <span class="text-title"><%= @release.title %></span>
             </h1>    
         </div>
