use slugs for news urls

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
 			</br>
 			<div class="column-block">
 				<h3 class="heading heading--article-title">
-					<a href=<%="/news/#{news_item.id}"%>><%= news_item.title %></a>
+					<a href=<%="/news/#{news_item.slug}"%>><%= news_item.title %></a>
 				</h3>
 				<div class="content-block--article">
 					<%= raw news_item.content %>
