render email properly with some js

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Rosarivo" rel="stylesheet" />
         <%= stylesheet_link_tag('styles') %>
+        <%= javascript_include_tag "email" %>
         <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
     </head>
     <body class="page--<%= controller.controller_name %>">
