--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,7 +8,7 @@
             <p>Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.</p>
             <p>We&#39;rre not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.</p>
             <p>Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.</p>
-            <p>EMAIL: <strong>WEBQUERY (at) FORWIND DOT NET</strong></p>
+            <p>Email: <strong><a href="#" class="email">WEBQUERY (at) FORWIND DOT NET</a></strong></p>
         </div>    
     </section>
 </article>
