--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,7 +75,7 @@
 
 <section class="content-block">
 	<h2 class="heading heading--content-block">
-		<span>Podcast highlight</span>
+		<span>Forwind Podcast highlight</span>
 		<a href="https://www.mixcloud.com/Forwind/uploads/" target="home">
 			<strong>All of our podcasts on Mixcloud</strong>
 		</a>
@@ -86,7 +86,7 @@
 			<a href=<%=@podcast.mixcloud_url%>>
 				<span class="text-title"><%= @podcast.title %></span>
 				<span class="text-title">Compiled & mixed by <%= @podcast.compiler %></span>
-				<span class="text-title">Genre : <%= @podcast.genre %></span>
+				<span class="text-title">Genre: <%= @podcast.genre %></span>
 			</a>
 		</figcaption>  
 	</div>
