--- a/app/assets/stylesheets/shared/_nav.scss
+++ b/app/assets/stylesheets/shared/_nav.scss
@@ -38,7 +38,7 @@
                 font-weight: 700;
                 display: inline-block;
                 margin-right: $spacing-factor / 3;
-                content: '•';
+                /* content: '•'; */
             }
         }
     }
@@ -64,8 +64,8 @@
             padding-top: $spacing-factor * 3;
             padding-bottom: $spacing-factor;
             @include background-color-block(0.9);
-            border-bottom: 1px solid $border-color;
-            transition: transform 0.1s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+            border-bottom: 0px solid $border-color;
+            transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
             a {
                 padding-bottom: $spacing-factor;
                 display: block;
