--- a/app/assets/stylesheets/shared/_featherlight.overrides.scss
+++ b/app/assets/stylesheets/shared/_featherlight.overrides.scss
@@ -14,18 +14,18 @@
         span {
             display: block;
             text-indent: 10000px;
-            background: transparent url('/assets/images/icon-next.png') no-repeat center center;
+            background: transparent url('https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/icon-next.png') no-repeat center center;
             @include breakpoint(m) {
-                background: transparent url('/assets/images/icon-next-sm.png') no-repeat center center;
+                background: transparent url('https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/icon-next-sm.png') no-repeat center center;
             }
         }
     }
     .featherlight-previous {
         span {
             text-indent: -10000px;
-            background: transparent url('/assets/images/icon-previous.png') no-repeat center center;
+            background: transparent url('https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/icon-previous.png') no-repeat center center;
             @include breakpoint(m) {
-                background: transparent url('/assets/images/icon-previous-sm.png') no-repeat center center;
+                background: transparent url('https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/icon-previous-sm.png') no-repeat center center;
             }
         }
     }
