bug fixes for mobile view artist show and home index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -100,12 +100,12 @@
 		</a>
 	</h2>
 	<div class="column-container column-container__2-cols">
-		<div class="column-block">
+		<div class="column-block column-block__figure">
 			<p>
 				Experimental ambience / Erratic rhythms / Reclaimed reverberations under the global floorboards / Detected and developed in Dublin and Berlin
 			</p>
 		</div>
-		<div class="column-block">
+		<div class="column-block column-block__figure">
 			<p>
 				Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.
 			</p>
