--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -5,6 +5,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
   }
 
 body {
@@ -359,21 +360,24 @@ img.news-image-top {
             align-self: start;
             &__main-content {
                 flex-basis: 66%;
-                margin-right: 1.2 * $spacing-factor;
+                /* margin-right: 1.2 * $spacing-factor; */
                 order: 1;
                 @include breakpoint(m) {
                     order: 2;
                     flex-basis: 100%;
                 }
-            }    
+            }       
             &__aside {
                 flex-basis: 33%;
                 order: 2;
                 width: 100%;
+                margin-left: 1.2 * $spacing-factor;
+
                 @include breakpoint(m) {
                     order: 1;
                     flex-basis: 100%;
                     align-self: unset;
+                    margin-left: 0;
                 }
             }
         }
