fix footer links

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -27,11 +27,11 @@
                 <div class="section-wrapper column-container column-container__2-cols column-container--v-centered">
                     <nav class="nav column-block">
                         <ul class="nav--social-media">
-                            <li><a href="http://forwind.bandcamp.com">Bandcamp</a></li>
-                            <li><a href="http://www.facebook.com/pages/Forwind/143631062329300">Facebook</a></li>
-                            <li><a href="http://twitter.com/#!/forwindings">Twitter</a></li>
-                            <li><a href="http://soundcloud.com/forwind">Soundcloud</a></li>
-                            <li><a href="https://www.youtube.com/channel/UC7KlAGrDB_X5BxX4HrRsXHA">YouTube</a></li>
+                            <li><a href="http://forwind.bandcamp.com" target="_blank">Bandcamp</a></li>
+                            <li><a href="http://www.facebook.com/pages/Forwind/143631062329300" target="_blank">Facebook</a></li>
+                            <li><a href="http://twitter.com/forwindings" target="_blank">Twitter</a></li>
+                            <li><a href="http://soundcloud.com/forwind" target="_blank">Soundcloud</a></li>
+                            <li><a href="https://www.youtube.com/channel/UC7KlAGrDB_X5BxX4HrRsXHA" target="_blank">YouTube</a></li>
                         </ul>    
                     </nav>
                     <div class="copyright-notice column-block">
