--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -20,9 +20,9 @@
         -->
         <div class="content-block content-block__banner">
             <figure>
-                <a href= <%= File.join(@s3_images, "releases", @release.cat.downcase + ".png")%> class="gallery" >
-                    <img src=<%= File.join(@s3_images, "releases", @release.cat.downcase + ".png")%>>
-                </a>    
+                <a href= <%= File.join(@release_images_path, @release.cat.downcase + "_digital_cover.jpg")%>>
+                    <img src=<%= File.join(@release_images_path, @release.cat.downcase + "_digital_cover.jpg")%>>
+                </a>
             </figure>
         </div>
 
