--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -20,7 +20,7 @@
         -->
         <div class="content-block content-block__banner">
             <figure>
-                <a href= <%= File.join(@release_images_path, @release.cat.downcase + "_digital_cover.jpg")%>>
+                <a href= <%= File.join(@release_images_path, @release.cat.downcase + "_digital_cover.jpg")%> class="gallery">
                     <img src=<%= File.join(@release_images_path, @release.cat.downcase + "_digital_cover.jpg")%>>
                 </a>
             </figure>
