--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -6,6 +6,8 @@ html, body {
     height: 100%;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: scroll; 
+    -webkit-overflow-scrolling: touch;    
   }
 
 body {
